2001-01-06  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/fstatfs64.c: New file.
	* sysdeps/mach/hurd/fstatvfs64.c: New file.
	* sysdeps/mach/hurd/statfs64.c: New file.
	* sysdeps/mach/hurd/statvfs64.c: New file.
	* sysdeps/mach/hurd/statfsconv.c: New file.
	* sysdeps/mach/hurd/Dist: Add statfsconv.c.

2001-01-06  Ulrich Drepper  <drepper@redhat.com>

	* iconv/skeleton.c: Reset outbuf for next round of the loop.
	Reported by Owen Taylor <otaylor@redhat.com>.
	* iconv/Makefile (tests): Add tst-iconv3.
	* iconv/tst-iconv3.c: New file.

	* iconvdata/ibm930.c: Fix handling of state.  Optimize a bit.
	* iconvdata/ibm933.c: Likewise.
	* iconvdata/ibm935.c: Likewise.
	* iconvdata/ibm937.c: Likewise.
	* iconvdata/ibm939.c: Likewise.
	* iconvdata/ibm930.h: Adjust single byte table for optimization.
	* iconvdata/ibm933.h: Likewise.
	* iconvdata/ibm935.h: Likewise.
	* iconvdata/ibm939.h: Likewise.

	* iconvdata/testdata/IBM930: Add misssing SI.
	* iconvdata/testdata/IBM933: Likewise.
	* iconvdata/testdata/IBM935: Likewise.
	* iconvdata/testdata/IBM937: Likewise.
	* iconvdata/testdata/IBM939: Likewise.

2001-01-06  Andreas Jaeger  <aj@suse.de>

	* configure.in: Check for old add-ons that shouldn't be used with
	current glibc anymore.

2001-01-06  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/readdir_r.c (__readdir_r): Return error number
	instead of -1 on failure.  Don't forget to copy file name into
	*ENTRY if successful.  Set *RESULT to NULL upon reaching the end
	of the directory.

2001-01-06  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/xstatconv.c (xstat64_conv): Don't forget to
	copy st_atime member.

2001-01-05  Ulrich Drepper  <drepper@redhat.com>

	* io/ftw.c (ftw_dir): Don't add a second slash at the beginning
	for searches from the root directory.
	Reported by loris <loris@iol.it> [PR libc/1991].
	* io/Makefile (tests): Add bug-ftw1.
	* io/bug-ftw1.c: New file.

	* elf/dl-support.c (non_dynamic_init): Don't define DL_FIND_AUXV