@@ -1,3 +1,9 @@
+2001-01-07  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/fstatvfs.c (fstatvfs): Add comment about
+	`struct statfs' and `struct statvfs' being identical.
+	* sysdeps/mach/hurd/statvfs.c (statvfs): Likewise.
+
 2001-01-06  Mark Kettenis  <kettenis@gnu.org>
 
 	* sysdeps/mach/hurd/fstatfs64.c: New file.
